# ocaml-gamedev-template

./: dune-project  ocaml-gamedev-template.opam  ocaml-gamedev-template.opam.template
lib/: dune  main.ml  main.mli  ocaml_gamedev_template_lib.ml  state.ml  state.mli  util.ml  util.mli  with_game_event.mli
src/: bounds.mli  camera.ml  camera.mli  dune  state.mli
src/button/: button.ml  button.mli  dune  import.ml  ocaml_gamedev_template_button.ml
src/camera/: camera.ml  camera.mli  dune  import.ml  ocaml_gamedev_template_camera.ml
src/common/: bounds.ml  bounds.mli  common.ml  dune  game_object_intf.ml  ocaml_gamedev_template_common.ml  resource_manager.ml  util.ml  util.mli  with_game_event.ml
src/game/: dune  import.ml  main.ml  state.ml  state.mli
src/lib/button/: button.ml  dune  import.ml
src/lib/camera/: camera.ml  camera.mli  dune  import.ml
src/lib/common/: bounds.ml  bounds.mli  common.ml  dune  game_object_intf.ml  input_manager.ml  input_manager.mli  resource_manager.mli  util.ml
src/lib/comms/: comms.ml  comms.mli  dune
src/lib/menu/: dune  menu.ml
src/lib/scene_common/: dune  event.mli  scene_common.ml  scene_intf.ml
src/main/: dune  import.ml  main.ml  main.mli  ocaml_gamedev_template_lib.ml  state.ml  state.mli  subthread.ml  subthread.mli  subthread_intf.ml  wait_ten.ml  wait_ten.mli
src/menu/: dune  import.ml  menu.ml  menu.mli  ocaml_gamedev_template_menu.ml
src/scenes/space/: dune  import.ml  space_scene.ml  space_scene.mli
test/: dune
